untrash ui issue fixed, icon hiding behind status issue fixed

--- a/aidr-manager/src/main/webapp/resources/css/style.css
+++ b/aidr-manager/src/main/webapp/resources/css/style.css
@@ -75,26 +75,24 @@ box-shadow: #C7D3E0 0 1px 0px 0 #3383ce, #3383ce 0 -1px 0px 0 inset, #3383ce -1p
      /*background-color: #FFFFFF; */
 }
 .inputForm {
-	margin-left: 1px;
-	width: 286px;
-	height: 29px;
-	//font-size: 14px;
-	padding: 4px 6px 3px 6px;
-    font-family: "Lucida Sans Unicode", "Lucida Grande", "Arial";
-	line-height: 1.42857143;
-	color: #000;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid #ccc;
-	//border-radius: 4px;
-	//-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	//box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
-		ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
-		.15s;
-	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    margin-left: 1px;
+    width: 286px;
+    height: 29px;
+    padding: 4px 6px 3px 6px;
+    font-family: sansation;
+    font-weight: bold;
+    line-height: 1.42857143;
+    color: #000;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow
+ ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out
+ .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
 
 .x-window-header-text-container {
 	overflow: hidden;
